# matsim-schemas

./: .gitignore  Cargo.toml  README.md  buf.yaml
.github/workflows/: ci.yml
java/: pom.xml
proto/matsim/simulation/io/types/: events.proto  general.proto  network.proto  population.proto  vehicles.proto
rust/: Cargo.toml  build.rs
rust/src/: lib.rs
